# zappier

./:  PROMPT 0: Baseline Testing   PROMPT 3: Partial Analysis Mode (P2)  .gitignore  CURRENT_STATE.md  DEVELOPER_EDITION_PLAN.md  PHASE_1_STABILIZATION_SUMMARY.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_STATUS.md  PROMPT 1: Fix Flexible File Paths (P0)  PROMPT 2: Fix Serde Aliases (P1)  PROMPT 4: CSV Header Agnostic (P3 - Optional)  README.md  TIER_PRICING_IMPLEMENTATION.md  app.html  index.html  index.html.backup  package-lock.json  package.json  postup prompty.txt  tsconfig.json  vite.config.ts
.cline/: ai-agent.md  report-tone.md  rules.md  tech-stack.md  zapier-heuristics.md
doc/: CSV_PARSING_IMPLEMENTATION.md  PRODUCTION_AUDIT_REPORT 6.2.2026.md  PRODUCT_STATUS_REPORT 14.1.2026.md  PRODUCT_STATUS_TECHNICAL_DEBT.md  ZApier_lighthouse_contemt.md
src/: handoffGenerator.ts  handoffViewModelMapper.ts  index.html  main.ts  main.ts.backup  pdfGenerator.ts  pdfGenerator.ts.backup  pdfHelpers.ts  pdfViewModelMapper.ts  style.css  validation.ts
src-wasm/: Cargo.toml
src-wasm/pkg/: package.json  zapier_lighthouse_wasm.d.ts  zapier_lighthouse_wasm.js  zapier_lighthouse_wasm_bg.wasm  zapier_lighthouse_wasm_bg.wasm.d.ts
src-wasm/src/: audit_schema_v1.rs  lib.rs
src-wasm/tests/: compatibility_test.rs
src/types/: audit-schema.d.ts  reaudit.ts
test-data/: README-test-fixtures.md  bad_example.json  real_history.csv  report_template.html
test-data/standard/: zapfile.json
test-data/standard/task_history/: zap_12345_history.csv  zap_66666_history.csv  (+1 more)
